# ChessBoard-Stockfish

./: .gitignore  GAP_ANALYSIS.md  README.md  Stockfish's Pre-NNUE Chess Engine Dominance.md  app.py  arena_app.py  arena_stats.csv  download_assets.py  engine.py  engine_config.json  implementation_plan.md  requirements.txt  settings.json
.github/workflows/: ci.yml
Stockfish-master/: quick_test.bat  test_engine.py
Stockfish-master/src/: Makefile  movepick.cpp  search.cpp  ucioption.cpp
books/: README.md
rust_engine/: .gitignore  Cargo.toml  HOW_IT_WORKS.md  benchmark.py  benchmark_sf11.py  benchmark_sf_hce.py  build.bat  cache_sf_moves.py  custom_benchmark.py  debug_double_edged.py  debug_eval.py  debug_stuck.py  deep_bench.bat  generate_tuning.py  jules_questions.md  pyproject.toml  quick_bench.bat  run_benchmark.bat  setup_stockfish.py  stockfish_bench.py  tuning_data.epd
rust_engine/src/: book.rs  eval.rs  lib.rs  movegen.rs  pst.rs  search.rs  tablebase.rs  test_ep_check.rs
src/: classical_uci.py  config.py  dataset.py  download_data.py  heuristics.py  mcts.py  model.py  rl_loop.py  rust_uci.py  self_play.py  train.py  train_online.py  uci.py
